Auto stash before merge of "main" and "origin/main"

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,12 @@ opencv-python = "*"
 numpy = "*"
 requests = "*"
 pydl = "*"
+astroquery = "*"
+mahotas = "*"
+importlib-metadata = "==1.7.0"
 
 [requires]
 python_version = "3.6"
+
+[pipenv]
+allow_prereleases = true
